test/files/neg/primitive-sigs-1.check
A_3.scala:3: error: type mismatch;
 found   : Bippy
 required: AC[Integer]
    J_2.f(new Bippy())
          ^
one error found
